# Autonomous_Job_seek

./: .env.example  .gitignore  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/03-ai-matching/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-PLAN.md  03-07-SUMMARY.md  03-RESEARCH.md
.planning/phases/04-application-automation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-RESEARCH.md
alembic/: env.py
alembic/versions/: 0000_enable_pgvector.py  0002_create_profiles.py  0003_create_job_preferences.py  0004_create_resumes.py  0005_create_jobs.py  0006_create_job_matches.py  0007_create_applications.py  a4cc42930aff_create_users_table.py
src/jobplatform/: celery_app.py  config.py  database.py  dependencies.py  log_config.py  main.py  rate_limiting.py
src/jobplatform/applications/: models.py  router.py  schemas.py  service.py  tasks.py
src/jobplatform/auth/: jwt.py  (+4 more)
tests/: conftest.py  test_applications.py  test_auth.py  test_health.py  test_jobs.py  test_matching.py  test_portals.py  test_preferences.py  test_profiles.py  test_resumes.py  test_scrape_worker.py
(+32 files in other folders)
